--- a/eweb/pom.xml
+++ b/eweb/pom.xml
@@ -37,10 +37,21 @@
             <artifactId>eutil</artifactId>
             <version>1.0</version>
         </dependency>
+        <!-- 添加对shiro的支持 -->
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>15.0</version>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.2.4</version>
         </dependency>
     </dependencies>
     <build>
