--- a/eweb/src/main/webapp/WEB-INF/web.xml
+++ b/eweb/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,20 @@
     <listener>
         <listener-class>com.dsdl.eidea.base.web.listener.OnLineUserListener</listener-class>
     </listener>
+    <!-- shiro过滤器定义 -->
+    <filter>
+        <filter-name>userloginFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理 -->
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>userloginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>spring</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
